# wpe

./: Cargo.toml  LICENSE  README.md  justfile
linux/: io.melechtna.wpe-autostart.desktop  io.melechtna.wpe.desktop  io.melechtna.wpe.metainfo.xml
src/: cli.rs  config.rs  main.rs  monitors.rs  mpvpaper.rs  profile_launcher.rs
src/gui/: app.rs  editor.rs  helpers.rs  message.rs  mod.rs  overlay.rs  style.rs  types.rs
