[package]
name = "wpe"
version = "1.0.0"
edition = "2024"
description = "Wayland wallPaper Engine"
license = "MIT"

[dependencies]
# CLI & logging
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

# Wayland
smithay-client-toolkit = "0.20"
wayland-client = "0.31"

# GUI
iced = { version = "0.13.1", features = ["wgpu", "image", "svg", "tokio", "advanced"] }
ashpd = { version = "0.12", features = ["tokio"] }
zbus = "5.12"
walkdir = "2.5"
futures = "0.3"
